# 6-second-scribbles

./: .coverage  .cspell.yaml  .cspell.yml  .dockerignore  .env.development  .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MOBILE_IMPROVEMENTS.md  README.md  asdas.yml  biome.json  biome.jsonc  codecov.yml  compose.override.yml  compose.prod.yml  compose.yml  eslint.config.ts  index.html  justfile  lefthook.yml  package.json  partykit.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: backend-tests.yml  ci.yml  cleanup-integration-label.yml  label-integration.yml  pr-tests.yml  release-please.yml
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  Makefile  README.md  alembic.ini  database.py  db_models.py  docker-compose.yml  game_room.py  justfile  main.py  models.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scoring.py  seed_data.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2025_01_18_1430-001_add_custom_categories_support.py  2025_01_18_1900-002_add_language_support.py  2026_03_28_0001-003_drop_game_sessions.py  2026_04_01_0001-004_fix_schema_correctness.py  2026_04_02_0001-001_initial_schema.py  2026_04_04_2023-490d0308e138_initial_state.py  2026_04_04_2115-b2a7f484d1a9_jsonb_translations.py
backend/app/: __init__.py  api_schemas.py  config.py  database.py  db_models.py  domain_types.py  game_room.py  main.py  models.py  redis_store.py  result_models.py  room_state.py  schema_adapters.py  scoring.py  websocket.py  ws_handler.py  ws_protocol.py
backend/app/auth/: dependencies.py  router.py  schemas.py  security.py  service.py
backend/app/categories/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/core/: __init__.py  avatar.py  config.py  database.py  logging.py  migrations.py  models.py  rate_limits.py  redis.py  types.py
backend/app/rooms/: __init__.py  actions.py  kick_vote.py  lifecycle.py  manager.py  mutations.py  player_lifecycle.py  protocol.py  results.py  rounds.py  router.py  scheduler.py  schemas.py  session.py  state.py  ws_router.py
backend/app/routers/: categories.py  rooms.py  system.py  ws.py
backend/app/scoring/: __init__.py  models.py  services.py
backend/app/services/: category_service.py  room_service.py  websocket_action_service.py  websocket_service.py  websocket_session_protocol.py
backend/app/system/: router.py  schemas.py
backend/app/users/: __init__.py  models.py  router.py  schemas.py
backend/scripts/: .cspell.yml  .seed_translation_hash  auto_translate_seed_data.py  generate_contracts.py  generate_frontend_types.py  generate_protocol_contracts.py  seed_data _bk copy.yaml  seed_data.json  seed_data.py  seed_data.yaml
backend/tests/: __init__.py  conftest.py  constants.py  helpers.py  support.py  test_auth.py  test_auto_translate_seed_data.py  test_category_locale_availability.py  test_custom_categories.py  test_game_room.py  test_host_transfer_and_limits.py  test_integration.py  test_main.py  test_random_room_join.py  test_room_hibernation.py  test_scoring.py  test_seed_data.py  test_services.py
backend/tests/integration/: conftest.py  test_auth.py  test_category_service.py  test_room_persistence.py  test_seed_data.py
backend/tests/unit/: conftest.py  test_app_surface.py  test_argos_provider.py  test_auth_fast.py  test_auto_translate_seed_data.py  test_avatar_color.py  test_category_locale_availability.py  test_category_service_extra.py  test_game_room.py  test_host_transfer_and_limits.py  test_quick_play.py  test_random_room_join.py  test_redis_and_translation.py  test_room_hibernation.py  test_rooms_and_contracts.py  test_round_highlights.py  test_scoring.py  test_services.py  test_translation_service.py  test_websocket_flows.py  test_ws_throttle.py
backend/translation/: .translation_cache.json  __init__.py  argos_provider.py  cache.py  opencc_converter.py  service.py
contracts/: README.md  client-events.examples.json  openapi.json  room-events.json  room-websocket.asyncapi.yaml  room-websocket.metadata.json  server-events.examples.json
contracts/asyncapi/: room-websocket.asyncapi.yaml  room-websocket.metadata.json
contracts/catalog/: room-events.json
contracts/examples/: client-events.json  server-events.json
contracts/jsonschema/: client-event.schema.json  server-event.schema.json
docs/: architecture.md
docs/adr/: 0001-committed-generated-contracts.md  README.md
frontend/: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  biome.json  eslint.config.js  index.html  justfile  package-lock.json  package.json  playwright.a11y.config.ts  playwright.config.ts  pnpm-lock.yaml  sync_locales.cjs  sync_locales.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/e2e/: a11y.spec.ts  lobby.spec.ts  navigation.spec.ts  waiting-room.spec.ts
frontend/scripts/: generate-asyncapi.mjs  generate-contracts.mjs  generate-types.mjs  sync_locales.js  validate-contracts.mjs
frontend/src/: App.vue  env.d.ts  i18n.ts  main.ts
frontend/tests/: client-drawpad-partial.test.ts  client-drawpad.test.ts  client-handlers.test.ts  client-pad-visibility.test.ts  client-settings.test.ts  drawpad-cursor.test.ts  server-drawpad-partial.test.ts  (+3 more)
scripts/: check-contracts.mjs
src/: App.vue  main.ts
tests/: client-drawpad-partial.test.ts  client-drawpad.test.ts  client-pad-visibility.test.ts  client-settings.test.ts  drawpad-cursor.test.ts  logging.test.ts  partysocket-reconnect.test.ts  router-guard.test.ts  server-drawpad-partial.test.ts  server-drawpad.test.ts  server-host-transfer.test.ts  server-idle.test.ts  server-metadata-normalization.test.ts  server-pad-visibility.test.ts  server-room-reset.test.ts  server-settings.test.ts  useGuesses.test.ts  useRoundTimer.test.ts
(+288 files in other folders)
