[project]
  dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.122.0",
    "pydantic-settings>=2.12.0",
    "rapidfuzz>=3.14.3",
    "redis>=5.0",
    "sqlalchemy>=2.0",
  ]
  description = "Backend for 6-second-scribbles"
  name = "backend"
  readme = "README.md"
  requires-python = ">=3.14"
  version = "0.1.0"

[dependency-groups]
  migrations = [
    "alembic>=1.17.2",
  ]
  dev = [
    { include-group = "migrations" },
    "fakeredis>=2.34.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "pre-commit>=4.5.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "testcontainers>=4.14.2",
    "ty>=0.0.27",
  ]

[tool.pytest.ini_options]
  addopts = [
    "--cov-branch",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov=.",
    "--strict-markers",
    "--tb=short",
    "-v",
  ]
  asyncio_mode = "auto"
  markers = [
    "asyncio: mark a test as requiring asyncio.",
    "integration: mark a test as an integration test.",
    "slow: mark a test as slow.",
    "unit: mark a test as a unit test.",
  ]

[tool.ruff]
  line-length    = 120
  target-version = "py314"

  extend-exclude = ["*/.venv/*", "*/.vscode/*", "*/alembic/versions/*", "*/migrations/*"]

  format.docstring-code-format = true

  lint.fixable = ["ALL"]
  lint.select  = ["ALL"]

  lint.ignore = [
    # Avoid conflicts with the formatter
    "COM812", # missing-trailing-comma

    # Overly strict rules
    "ANN204", # missing-return-type-special-method
    "D105",   # undocumented-magic-method
    "D107",   # undocumented-public-init
  ]

  # Allow default arguments for FastAPI functions
  lint.flake8-bugbear.extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

  # Allow runtime imports for FastAPI dependency injection and Pydantic validation
  lint.flake8-type-checking.exempt-modules = ["fastapi", "typing.Annotated"]

  lint.pydocstyle.convention = "google"

  lint.pylint.allow-magic-value-types = ["int"]
  lint.pylint.max-args                = 10

  [tool.ruff.lint.per-file-ignores]

    "alembic/**/*.py" = [
      "D",       # Alembic migration scripts are auto-generated and don't need docstrings or type annotations
      "INP001",  # Alembic migration scripts should not be recognized as a module
      "PLR2004", # Literal values keep migration scripts readable
    ]
    "tests/**/*.py" = [
      "ANN",     # Tests can use lightweight fixture and helper typing
      "D",       # Test names already document intent well enough
      "PLR2004", # Literal values keep assertions readable in tests
      "S101",    # allow assert in test files
      "SLF001",  # Tests may exercise internal state transitions intentionally
    ]
