[project]
  dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "pydantic-settings>=2.12.0",
    "rapidfuzz>=3.14.3",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "structlog>=25.5.0",
    "uvicorn>=0.44.0",
  ]
  description = "Backend for 6-second-scribbles"
  name = "backend"
  readme = "README.md"
  requires-python = ">=3.14"
  version = "0.1.0"

[dependency-groups]
  dev = [
    { include-group = "db-migrations" },
    { include-group = "db-seed" },
    { include-group = "testing" },
    "ruff>=0.14.6",
    "ty>=0.0.27",
  ]

  db-migrations = ["alembic>=1.17.2"]
  db-seed = ["pyyaml>=6.0.1"]
  db-translate = ["argostranslate>=1.9.6", "pyyaml>=6.0.1"]
  testing = [
    "fakeredis>=2.34.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.1",
    "testcontainers>=4.14.2",
  ]

[tool.pytest.ini_options]
  addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
  ]
  asyncio_default_fixture_loop_scope = "session"
  asyncio_default_test_loop_scope = "session"
  asyncio_mode = "auto"
  markers = [
    "asyncio: mark a test as requiring asyncio.",
    "integration: mark a test as an integration test.",
    "slow: mark a test as slow.",
    "unit: mark a test as a unit test.",
  ]

[tool.coverage.run]
  branch = true
  source = ["app", "scripts", "translation"]
  omit = ["alembic/*"]

[tool.coverage.report]
  fail_under = 80
  omit = ["alembic/*"]

[tool.ruff]
  line-length    = 120
  target-version = "py314"

  extend-exclude = ["*/.venv/*", "*/.vscode/*", "*/alembic/versions/*", "*/migrations/*"]

  format.docstring-code-format = true

  [tool.ruff.lint]

    fixable = ["ALL"]
    select  = ["ALL"]

    ignore = [
      # Avoid conflicts with the formatter
      "COM812", # missing-trailing-comma

      # Overly strict rules
      "ANN204", # missing-return-type-special-method
      "D105",   # undocumented-magic-method
      "D107",   # undocumented-public-init
    ]

    # Allow default arguments for FastAPI functions
    flake8-bugbear.extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

    # Allow runtime imports for FastAPI dependency injection and Pydantic validation
    flake8-type-checking.exempt-modules = ["fastapi", "typing.Annotated", "app"]

    pydocstyle.convention = "google"

    [tool.ruff.lint.per-file-ignores]

      "alembic/**/*.py" = [
        "D",       # Alembic migration scripts are auto-generated and don't need docstrings or type annotations
        "INP001",  # Alembic migration scripts should not be recognized as a module
        "PLR2004", # Literal values keep migration scripts readable
      ]
      "tests/**/*.py" = [
        "S101", # Allow assert in test files
      ]

    [tool.ruff.lint.isort]
      # Keep backend package boundaries explicit for import sorting.
      known-first-party = ["app", "scripts", "tests"]

      # Prevent the alembic directory from shadowing the alembic PyPI package
      known-third-party = ["alembic"]

    [tool.ruff.lint.pylint]
      allow-magic-value-types = ["int"]
      max-args                = 10
